Renaming: Use 'shooter' instead of 'shooters'
